--- a/railway.toml
+++ b/railway.toml
@@ -2,4 +2,4 @@
 builder = "nixpacks"
 
 [deploy]
-startCommand = "streamlit run app.py --server.port=$PORT --server.address=0.0.0.0"
+startCommand = "streamlit run track_b.py --server.port=$PORT --server.address=0.0.0.0"
